Tabli compile problem + AST email object